two rounds experiments

--- a/src/cnnbilstm.ipynb
+++ b/src/cnnbilstm.ipynb
@@ -540,6 +540,7 @@
     "    model_prediction.load_state_dict(model_state_dict)\n",
     "    # optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
     "    best_vali_loss = checkpoint['best_vali_loss']\n",
+    "    'val_acc': val_acc,\n",
     "    best_epoch = checkpoint['best_epoch']\n",
     "    print(\"=> loaded checkpoint '{}' (epoch {})\"\n",
     "          .format(model_path, checkpoint['epoch']))\n",
